Cleaned up some small spacing and sizing issues on home page

--- a/app/assets/stylesheets/blog.sass
+++ b/app/assets/stylesheets/blog.sass
@@ -1,11 +1,11 @@
 @import tango.min
 
-$avitar-size:70px
+$avatar-size:70px
 
 .tag
   padding: 4px 8px
   font-size: 12px
-  background-color: #ddd
+  background-color: #eee
   display: inline-block
   margin: 2px 0
   font-weight: 600
@@ -30,6 +30,11 @@ $avitar-size:70px
     li
       list-style: none
       line-height: 1.9em
+      a
+        font-weight: bold
+  h3.sidebar__header
+    font-size: 18px
+    margin-top: 35px
 
 .sidebar__nav
   font-size: 14px
@@ -40,10 +45,10 @@ ul.post__list li
   list-style-position: inside
   font-size: 17px
   a
-    font-weight: 600
+    font-weight: bold
 
 .post
-  margin-bottom: 4em
+  margin-bottom: 10em
   &:last-of-type
     margin-bottom: 0
   .post__header
@@ -52,14 +57,15 @@ ul.post__list li
   .post__title
     color: #fff
     width: 112.5%
+    font-size: 30px
+    line-height: 1.2em
     position: relative
     margin-top: 0px
-    margin-bottom: .25em
+    margin-bottom: 0.5em
     text-transform: capitalize
     background: $brand1
-    padding: 10px
+    padding: 10px 20px 10px 65px
     margin-left: -65px
-    padding-left: 65px
     border-top-right-radius: 3px
     border-bottom-right-radius: 3px
     float: right
@@ -69,7 +75,8 @@ ul.post__list li
       @include transition-property(color)
       @include transition-duration(0.5s)
       &:hover
-        color: #9ad9f1
+        color: #eee
+
   .post__time
     &:before
       content: "  \2022  "
@@ -79,11 +86,14 @@ ul.post__list li
     &.hide-for-medium-down
       left: 0
       top: 50%
-      margin-top: - ($avitar-size / 2)
-      margin-left: - ($avitar-size / 2)
-      width: ($avitar-size)
-      height: ($avitar-size)
-
+      margin-top: - ($avatar-size / 2)
+      margin-left: - ($avatar-size / 2)
+      width: ($avatar-size)
+      height: ($avatar-size)
+      width: $avatar-size
+      height: $avatar-size
+  .post__author
+    font-weight: bold
   .post__player
     margin-bottom: 20px
 
